tornando a rota de calculo de cdb como get
